#10 Contrast fix login hero

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -534,4 +534,15 @@ main.gebruikers {
   .live-section {
     background: var(--background-dark);
   }
+
+  .login-hero {
+    color: black;
+
+    i {
+      color: red;
+    }
+  }
+
+
+
 }
